Update card schema: Traditional/Simplified ordering; etymology label uses traditional char; add conditional Simplification rule with simplified in label; remove Character/Pronunciation; normalize MISSING/None; default identical forms; validators/render/call sites updated

--- a/output/1/book/早.md
+++ b/output/1/book/早.md
@@ -1,14 +1,15 @@
-## early; in advance
+## early
 ---
-- **Character:** 早
-- **Pronunciation:** zǎo
+- **Traditional:** MISSING
+- **Simplified:** 早
 - **Definition:** early; in advance
 - **Contemporary usage:**
   - 我醒得很早。 (Wǒ xǐng dé hěn zǎo) - I woke up early.
   - 你能不能早一点来？ (Nǐ néng bù néng zǎo yīdiǎn lái) - Can you be here a little earlier?
-- **Etymology (早):**
-  - **Type:** pictogram → phono-semantic compound → ideogrammic compound
-  - **Description:** Early bronze: pictogram ‘acorn’, original form of 皂 via 皁 (also once written as 草), borrowed phonetically for “morning”; late bronze: 日 “sun” + phonetic 棗 (sometimes simplified as 朿); small seal: 日 + 甲 “first” (Xu Shen), with 蚤 also used in some ancient texts.
-  - **Interpretation:** The original acorn pictogram (the source of 皂) was repurposed for the sound value to write the ‘morning/early’ word; adding the semantic 日 ‘sun’ with the phonetic 棗 tied the graph’s sound (OC *ʔsuːʔ) to the same phonetic family, which develops to Mandarin zǎo. The later small‑seal analysis 日 + 甲 ‘first’ transparently depicts the sun’s first appearance, reinforcing the modern sense ‘early’.
+- **Etymology (MISSING):**
+  - **Type:** pictogram → phono‑semantic → ideogrammic
+  - **Description:** pictogram of acorn → semantic: 日 (rì, sun), phonetic: 棗 (zǎo, jujube) → ideogrammic: 日 (rì, sun) + 甲 (jiǎ, first)
+  - **Interpretation:** It began as a drawing of an acorn, whose sound was later borrowed to write “morning,” and the form was clarified by adding 日 (rì, sun) for meaning with 棗 (zǎo, jujube) for sound. Later scholars reinterpreted it as 日 (rì, sun) + 甲 (jiǎ, first) to picture the first light of day.
   - **Reference:** [早 — Wiktionary](https://en.wiktionary.org/wiki/%E6%97%A9)
+  - **Simplification rule (早):** MISSING
 %%%
