feat: schema-driven output; add etymology + reference; enforce pinyin/quotes; cap usage to 3; robust verbose + Ctrl-C clean exit; remove dbg logs

--- a/output/1/book/得.md
+++ b/output/1/book/得.md
@@ -1,5 +1,15 @@
 ## structural particle de
 ---
-- **Traditional:**: 得
-- **Simplified:**: 得
+- **traditional:**: 得
+- **simplified:**: 得
+- **definition:**: structural particle de
+- **contemporary usage:**
+  - 他跑得快 (tā pǎo de kuài, "he runs fast")
+  - 他画得好 (tā huà de hǎo, "he paints well")
+  - 他跑得像一阵风 (tā pǎo de xiàng yī zhèn fēng, "he runs like wind")
+- **etymology (得):**
+  - **type:**: ideogrammic compound
+  - **description:**: ideogrammic: 貝 (bèi, "cowry") + 又 (yòu, "hand") → add 彳 (chì, "step") → replace 又 (yòu, "hand") with 寸 (cùn, "inch") → simplify 貝 (bèi, "cowry") to 目 (mù, "eye") → later to 旦 (dàn, "dawn")
+  - **interpretation:**: A hand 又 (yòu, "hand") taking a cowry 貝 (bèi, "cowry") conveys “to obtain”; 彳 (chì, "step") hints at picking it up on the road. Later scripts swapped 又 for 寸 (cùn, "inch") and regularized 貝 into 目 then 旦, yielding the modern form.
+  - **reference:**: https://en.wiktionary.org/wiki/%E5%BE%97
 %%%
