--- a/output/1/book/银.md
+++ b/output/1/book/银.md
@@ -1,6 +1,10 @@
 ## silver metal
 ### subword of "banking institution"
 ---
-- **Traditional:**: 銀
-- **Simplified:**: 银
+- **traditional:**: 銀
+- **simplified:**: 银
+- **definition:**: silver metal
+- **contemporary usage:**: None, not in contemporary use
+- **etymology (銀):**
+  - **reference:**: https://en.wiktionary.org/wiki/%E9%8A%80
 %%%
