--- a/output/1/book/银行.md
+++ b/output/1/book/银行.md
@@ -1,5 +1,16 @@
 ## banking institution
 ---
-- **Traditional:**: 銀行
-- **Simplified:**: 银行
+- **traditional:**: 銀行
+- **simplified:**: 银行
+- **definition:**: banking institution
+- **contemporary usage:**
+  - 银行出纳员 (yínháng chūnàyuán, "bank teller")
+  - 银行业务 (yínháng yèwù, "banking business")
+  - 银行集团 (yínháng jítuán, "banking group")
+- **etymology (銀行):**
+  - **type:**: semantic compound
+  - **description:**: semantic: 银 (yín, "silver") + 行 (háng, "business")
+  - **interpretation:**: Literally "silver business": combining 银 (yín, "silver") with 行 (háng, "business") to denote a money-handling establishment. The modern use for "bank" was possibly coined in British Hong Kong
+  - **reference:**: https://en.wiktionary.org/wiki/%E9%8A%80%E8%A1%8C
+  - **simplification rule (银行):**: Traditional 銀行 simplified to 银行 by replacing 銀 with 银 (component 金 → 钅, stroke reduction); 行 unchanged
 %%%
