Reorder manifest fields: complete_contiguous after complete

--- a/output/dry-run/oral/output/2.银.md
+++ b/output/dry-run/oral/output/2.银.md
@@ -3,5 +3,5 @@
 - **pinyin:** yín
 - **definition:** silver
 - **examples:**
-  - 这枚戒指是纯银的(這枚戒指是純銀的) (zhè méi jièzhi shì chún yín de, "This ring is made of pure silver")
+  - 这枚戒指是纯银做的(這枚戒指是純銀做的) (zhè méi jièzhǐ shì chún yín zuò de, "This ring is made of pure silver")
 %%%
