--- a/output/dry-run/oral/output/3.人口.md
+++ b/output/dry-run/oral/output/3.人口.md
@@ -6,6 +6,6 @@
   - 人: rén, person
   - 口: kǒu, mouth
 - **examples:**
-  - 这个国家的人口正在快速增长。(這個國家的人口正在快速增長。) (Zhège guójiā de rénkǒu zhèngzài kuàisù zēngzhǎng, "The country's population is growing rapidly.")
-  - 中国人口很多(中國人口很多) (Zhōngguó rénkǒu hěn duō, "China has a large population")
+  - 这个城市的人口正在快速增长(這個城市的人口正在快速增長) (zhège chéngshì de rénkǒu zhèngzài kuàisù zēngzhǎng, "The city's population is growing rapidly")
+  - 中国人口很多(中國人口很多) (zhōngguó rénkǒu hěn duō, "China has a large population")
 %%%
