--- a/output/dry-run/written/output/2.银.md
+++ b/output/dry-run/written/output/2.银.md
@@ -5,17 +5,17 @@
 - **pronunciation:** yín
 - **definition:** silver
 - **contemporary usage:**
-  - 银(銀)行 (yínháng, "banking institution")
-  - 银(銀)币(幣) (yínbì, "silver coin")
-  - 白银(銀) (báiyín, "silver bullion")
-  - 银(銀)子 (yínzi, "silver money")
+  - 白银(銀) (bái yín, "silver")
+  - 银(銀)仔 (yín zǎi, "coins")
+  - 两(兩)蚊银(銀) (liǎng wén yín, "two-dollar coin")
+  - 几(幾)千银(銀) (jǐ qiān yín, "a few thousand bucks")
 - **etymology (銀):**
   - **type:** phono-semantic compound
-  - **description:** semantic: 金 (jīn, "metal") + phonetic: 艮 (gèn, "stopping") → 银(銀) (yín, "silver").
-  - **interpretation:** The character combines 金 as the semantic determinative indicating a metal with 艮 as the phonetic element approximating the historical pronunciation leading to modern yín. The metal determinative directly fits the core meaning ‘silver’, and the term extended to money and currency because silver was historically used as a medium of exchange.
+  - **description:** phono-semantic: semantic: 金 (jīn, "metal") + phonetic: 艮 (gèn, "stopping").
+  - **interpretation:** 金 (jīn, "metal") is the semantic determinative, marking the character as related to metal. 艮 (gèn, "stopping") provides the sound, approximating the historical reading that led to yín; the metal determinative fits the core meaning "silver" and its extension to money.
   - **component characters:**
-    - 金 (jīn, "metal")
-    - 艮 (gèn, "stopping")
+    - 金
+    - 艮
   - **reference:** https://en.wiktionary.org/wiki/%E9%8A%80
-  - **simplification rule (银):** Left component 金 was simplified to the abbreviated radical 钅 while retaining the phonetic 艮 unchanged, following standard radical simplification conventions.
+  - **simplification rule (银):** Simplified by replacing the left-side 金 with the simplified metal radical 钅 while retaining the phonetic 艮.
 %%%
