--- a/output/dry-run/written/output/4.人.md
+++ b/output/dry-run/written/output/4.人.md
@@ -7,14 +7,14 @@
 - **pronunciation:** rén
 - **definition:** person; people; human
 - **contemporary usage:**
-  - 人类(類) (rén lèi, "humans")
+  - 人类(類) (rén lèi, "the human species")
   - 人手一册(冊) (rén shǒu yī cè, "everyone has a copy")
   - 人所共知 (rén suǒ gòng zhī, "common knowledge")
-  - 人云亦云 (rén yún yì yún, "follow the crowd")
+  - 人云(雲)亦云(雲) (rén yún yì yún, "follow the crowd")
 - **etymology (人):**
   - **type:** pictogram
-  - **description:** pictogram: depiction of a standing man in side view with an arm and a leg emphasized.
-  - **interpretation:** It depicts a human figure, highlighting a bent arm and leg. The drawing was gradually stylized into the simple form used today and generalized to mean a person or people.
+  - **description:** pictogram: depiction of a standing man.
+  - **interpretation:** It depicts a side view of a person with an arm and a leg emphasized, directly conveying the meaning ‘human/person’. The strokes were later streamlined as the script standardized, while the core meaning ‘person; people’ remained and underlies its broad modern use.
   - **component characters:**
     - None, character is in atomic form
   - **reference:** https://en.wiktionary.org/wiki/%E4%BA%BA
