--- a/output/dry-run/written/output/5.口.md
+++ b/output/dry-run/written/output/5.口.md
@@ -1,21 +1,21 @@
-## mouth; opening; entrance
+## mouth; opening; classifier for family members, wells, etc.
 ### sub-word
 #### population
 ---
 - **traditional:** 口
 - **simplified:** 口
 - **pronunciation:** kǒu
-- **definition:** mouth; opening; entrance
+- **definition:** mouth; opening; classifier for family members, wells, etc.
 - **contemporary usage:**
-  - 入口 (rù kǒu, "entrance")
-  - 出口 (chū kǒu, "exit")
   - 门(門)口 (mén kǒu, "doorway")
+  - 出口 (chū kǒu, "exit")
   - 人口 (rén kǒu, "population")
+  - 伤(傷)口 (shāng kǒu, "wound")
 - **etymology (口):**
   - **type:** pictogram
-  - **description:** pictogram: depiction of an open mouth.
-  - **interpretation:** It depicts an open mouth. From this concrete image, the meaning naturally extended to general openings and entrances, and by association it serves as a classifier for mouthfuls and items with openings.
+  - **description:** pictogram: depiction of 口 (kǒu, "mouth").
+  - **interpretation:** Depicts an open human mouth. The concrete sense ‘mouth’ extends to ‘opening’ and motivates its use as a classifier for mouthfuls and for counting people in a household.
   - **component characters:**
-    - None, character is in atomic form
+    - 口
   - **reference:** https://en.wiktionary.org/wiki/%E5%8F%A3
 %%%
