--- a/output/dry-run/oral/output/1.山.md
+++ b/output/dry-run/oral/output/1.山.md
@@ -3,6 +3,6 @@
 - **pinyin:** shān
 - **definition:** mountain
 - **examples:**
-  - 这座山很高(這座山很高) (zhè zuò shān hěn gāo, "This mountain is very tall")
-  - 我们去爬山(我們去爬山) (wǒmen qù pá shān, "We're going to hike in the mountains")
+  - 那座山很高 (nà zuò shān hěn gāo, "That mountain is very tall")
+  - 我们去爬山(我們去爬山) (wǒmen qù pá shān, "We're going hiking")
 %%%
