--- a/output/dry-run/oral/output/4.说话.md
+++ b/output/dry-run/oral/output/4.说话.md
@@ -3,9 +3,9 @@
 - **pinyin:** shuōhuà
 - **definition:** to speak
 - **characters:**
-  - 说(說): shuō, say
+  - 说(說): shuō, to say
   - 话(話): huà, speech
 - **examples:**
-  - 别在图书馆说话(別在圖書館說話) (bié zài túshūguǎn shuōhuà, "Don't speak in the library")
-  - 请小声说话(請小聲說話) (qǐng xiǎoshēng shuōhuà, "Please speak softly")
+  - 我在电话里说话(我在電話裡說話) (wǒ zài diànhuà lǐ shuōhuà, "I am speaking on the phone")
+  - 请小声说话(請小聲說話) (qǐng xiǎoshēng shuōhuà, "Please speak quietly")
 %%%
