--- a/output/dry-run/oral/output/5.得.md
+++ b/output/dry-run/oral/output/5.得.md
@@ -4,6 +4,6 @@
 - **definition:** (1) structural particle for verb complements; (2) to get, obtain; (3) must, have to
 - **examples:**
   - 他跑得很快 (tā pǎo de hěn kuài, "He runs very fast")
-  - 我得到了一条好消息(我得到了一條好消息) (wǒ dé dào le yì tiáo hǎo xiāo xī, "I received some good news")
-  - 我得早点出发(我得早點出發) (wǒ děi zǎodiǎn chūfā, "I have to set off earlier")
+  - 她终于得到了一份工作(她終於得到了一份工作) (tā zhōngyú dédào le yí fèn gōngzuò, "She finally got a job")
+  - 你今天得交作业(你今天得交作業) (nǐ jīntiān děi jiāo zuòyè, "You have to turn in your homework today")
 %%%
