--- a/output/dry-run/written/output/1.山.md
+++ b/output/dry-run/written/output/1.山.md
@@ -5,14 +5,14 @@
 - **pronunciation:** shān
 - **definition:** mountain
 - **contemporary usage:**
-  - 我们(們)去爬山 (wǒ men qù pá shān, "we go hiking")
+  - 爬山 (pá shān, "go hiking")
   - 登山 (dēng shān, "mountain climbing")
-  - 冰山 (bīng shān, "iceberg")
+  - 冰山 (bīng shān, "an iceberg")
   - 山区(區) (shān qū, "mountainous area")
 - **etymology (山):**
   - **type:** pictogram
   - **description:** pictogram: depiction of three mountain peaks.
-  - **interpretation:** It depicts three mountain peaks; early oracle-bone forms used triangles that were later stylized into vertical strokes. The straightforward pictorial origin directly yields the modern meaning “mountain.”
+  - **interpretation:** It depicts three adjacent mountain peaks. Early forms used triangular shapes; later the form was regularized to three strokes, but it continued to mean natural mountains and hills.
   - **component characters:**
     - None, character is in atomic form
   - **reference:** https://en.wiktionary.org/wiki/%E5%B1%B1
